<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/sudoku_game_finish_info" />

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/dialog_native_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="280x250"
        ads:adUnitId="@string/banner_ad_unit_id_for_test"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_finish_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/finish"/>

        <Button
            android:id="@+id/dialog_finish_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"/>


    </LinearLayout>

</LinearLayout>