<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game_mode_select_description"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/sudoku_game_mode_select_description"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/game_mode_select_ll"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:layout_below="@id/game_mode_select_description"
        android:weightSum="5"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="2">

            <ImageButton
                android:id="@+id/arrow_up_iv"
                android:layout_gravity="center"
                android:background="@drawable/co_btn_arrow_up_9"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/game_mode_tv"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:text="@string/sudoku_game_mode_1"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/arrow_down_iv"
                android:layout_gravity="center"
                android:background="@drawable/co_btn_arrow_down_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:id="@+id/game_mode_iv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/main_icon_ap_d"/>
    </LinearLayout>

    <Button
        android:id="@+id/game_start_bt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/game_mode_select_ll"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="@string/sudoku_game_start"/>

    <Button
        android:id="@+id/server_api_test_bt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/game_start_bt"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="Retorfit Test" />

</RelativeLayout>